OSP-Core: Changed BanList Display Panel ID from bannedUsers to modDisplay in channeplayer.html
OSP-Core: Changed Ban List Display Button ID from banListButton to modDisplayButton and onclick from openBanList() to openModDisplay() in channelplayer.html
OSP-Core: Changed banListOverlay CSS Class to modDisplayOverlay in channelplayer.html and theme.css files
OSP-Core: API Change - Moved /channel/authed/<channelLoc> into /channel/<channelLoc> and added option for optional authenticated view using api-key

0.8.3
==============================================
OSP-Core: Fixed a bug in chat.js that caused all chat messages to have **** after every letter if the banned chat list was blank

0.8.2
==============================================
OSP-Core: Changed OSP-Edge Playback endpoint redirect
OSP-Core: Set OSP-Edge Configuration File Rebuild on Boot as an option, Defaults to True
OSP-Core: Added Manual OSP-Edge Conf Rebuild Button
OSP-Core: Added Table channelBanList for future full channel banning and tracking of chat channel bans
OSP-Core: Fixes in channelplayer.html for Chat Banned Users List Showing User's UUID instead of Username.
OSP-Core: Fixed an error where an invalid RTMP server error log generated was incorrectly typed as a string
OSP-Core: Updated List of RTMP Ingests on User Channels page to include all active RTMP servers Authorized
OSP-RTMP: Changed OSP-Edge Restream endpoint
OSP-RTMP: Changed RTMP HLS Fragment Naming Scheme to Sequential
OSP-Edge: Changed Ingest RTMP and Playback endpoints
OSP-Edge: Added Checks for Idle/Dropped Streams
OSP-Edge: Changed RTMP HLS Fragment Naming Scheme to Sequential
OSP-Config: Added Missing OSP-Edge Upgrade Option
OSP-Config: OSP-Edge Install and Upgrades now allow for multiple IPs for configuring the authorized RTMP and Core Servers with commas
ejabberd: Fixed a bug in the auth_osp.py where is was ignoring accessing the local host api endpoint and was using the given xmpp domain address

0.8.1