@@ -186,6 +186,9 @@ function enterRoom(room) {
 function sendMessage() {
     var chatInput = document.getElementById('chatinput');
     var message = chatInput.value;
+    if (message.length > 750) {
+        message = message.slice(0,750);
+    }
     if (message != '') {
         var o = {to: ROOMNAME + '@' + ROOM_SERVICE, type: 'groupchat'};
         var m = $msg(o);
