@@ -162,7 +162,7 @@
                             <div class="membersList card my-3">
                               <div class="card-header bg-primary"><b>Banned Users</b></div>
                               <div id="OutcastList" class="card-body"></div>
-                          </div>
+                            </div>
                         </div>
                         <div id="chatMembers" class="chatMembersOverlay slide-in-blurred-top">
                           <div class="membersList card my-3">
@@ -184,7 +184,7 @@
                       <div class="chatFooterTop"></div>
                       <div class="chatFooterInput">
                           <div class="input-group">
-                              <input id="chatinput" type="text" class="form-control" autocomplete="off">
+                              <input id="chatinput" type="text" class="form-control" maxlength="750" autocomplete="off">
                               <div class="input-group-append">
                                 <button type="button" class=" btn btn-primary form-control" id="sendChat" onclick="sendMessage();"><i class="fas fa-paper-plane"></i></button>
                               </div>
