@@ -223,7 +223,7 @@
                           <div class="chatFooterTop"></div>
                           <div class="chatFooterInput">
                               <div class="input-group">
-                                  <input id="chatinput" type="text" class="form-control" autocomplete="off">
+                                  <input id="chatinput" type="text" class="form-control" maxlength="750" autocomplete="off">
                                   <div class="input-group-append">
                                     <button type="button" class=" btn btn-primary form-control" id="sendChat" onclick="sendMessage();"><i class="fas fa-paper-plane"></i></button>
                                   </div>
